<resources>
    <string name="app_name">HiBuddy</string>
    <string name="user_name">Enter your username</string>
    <string name="user_pwd">Your Password</string>
    <string name="btn_login">Enter</string>
    <string name="btn_reg">Register</string>
    <string name="expFor">Expense for...</string>
    <string name="expdate">5/10/2024</string>
    <string name="expValue">RM</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>