<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityExpense">

    <EditText
        android:id="@+id/edtExpFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/expFor"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/edtExpDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/expdate"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/edtExpValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/expValue"
        android:text="" />

    <Spinner
        android:id="@+id/spnQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        android:id="@+id/txtVwTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Total Price RM..."
        android:text="" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imgExp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save" />
</LinearLayout>